--- a/private/.htaccess
+++ b/private/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Protected Settings Page"
-AuthUserFile "C:\Users\nexan\Desktop\BIT 607\The-Haukai\private\.htpasswd"
+AuthUserFile "assignment3/private/.htpasswd"
 Require valid-user
